[tool.poetry]
name = "url-shortener-on-steroids"
version = "0.1.0"
description = "a url shortener service"
authors = ["MikeP <parfenov.ma21@physics.msu.ru>"]
license = "BSD Simplified"
readme = "README.md"
packages = [{include = "url_shortener_on_steroids"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
fastapi = "^0.87.0"
sqlalchemy = "^1.4.44"
psycopg2-binary = "^2.9.5"
redis = "^4.3.4"
alembic = "^1.8.1"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
bcrypt = "^4.0.1"
pyjwt = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
